responsive fixes after testing on iphone

--- a/src/sass/objects.sass
+++ b/src/sass/objects.sass
@@ -5,8 +5,6 @@
     z-index: -10
 
 .compass
-    top: -90%
-    left: -50%
     top: -400px
     left: -500px
 
@@ -37,3 +35,12 @@
         top: -200px
         right: -350px
         max-height: 80vh
+
+@media (max-width: 600px)
+    .compass
+        top: -200px
+        left: -300px
+
+    .helm
+        top: -100px
+        right: -250px
