--- a/src/sass/seagulls.sass
+++ b/src/sass/seagulls.sass
@@ -50,7 +50,7 @@
 @media (max-width: 600px)
     .seagull-2
         top: -100px
-        right: 300px
+        right: 280px
 
     .seagull-3
         left: 50px
