--- a/src/sass/waves.sass
+++ b/src/sass/waves.sass
@@ -122,7 +122,7 @@
 @media (max-width: 768px)
     #wave-container 
         height: 300px
-        
+
     .wave1
         bottom: 0px
     .wave2
@@ -137,15 +137,18 @@
         bottom: 150px
 
 @media (max-width: 600px)
+    #wave-container 
+        height: 200px
+
     .wave1
         bottom: 0px
     .wave2
-        bottom: 40px
+        bottom: 35px
     .wave3
-        bottom: 70px
+        bottom: 65px
     .wave4 
-        bottom: 90px
+        bottom: 85px
     .wave5
-        bottom: 120px
+        bottom: 110px
     .wave6 
-        bottom: 140px
+        bottom: 130px
